--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dota2wardmap-front",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,11 +13,13 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
+    "wasm": "file:src/wasm/pkg",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build:wasm && react-scripts start",
+    "build": "npm run build:wasm && react-scripts build",
+    "build:wasm": "wsl --exec /bin/sh -c \"export PATH=\"~/.cargo/bin:$PATH\" && cd src/wasm && wasm-pack build --target web\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -24,7 +27,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "env": {
+      "es2020": true
+    }
   },
   "browserslist": {
     "production": [
