Add React layout and vision calculation for map

--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/circle": "^6.5.0",
+    "@turf/polygon-smooth": "^6.5.0",
+    "bootstrap": "^5.3.1",
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
     "ol": "^7.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
+    "turf": "^3.0.14",
+    "visibility-polygon": "^1.1.0",
     "wasm": "file:src/wasm/pkg",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run build:wasm && react-scripts start",
+    "start": "react-scripts start",
+    "start:wasm": "npm run build:wasm && react-scripts start",
     "build": "npm run build:wasm && react-scripts build",
     "build:wasm": "wsl --exec /bin/sh -c \"export PATH=\"~/.cargo/bin:$PATH\" && cd src/wasm && wasm-pack build --target web\"",
     "test": "react-scripts test",
