--- a/src/wasm/Cargo.toml
+++ b/src/wasm/Cargo.toml
@@ -16,7 +16,7 @@ linfa = "0.6.1"
 linfa-clustering = "0.6.1"
 ndarray = "0.15.6"
 serde = { version = "1.0", features = ["derive"] }
-serde-wasm-bindgen = "0.4"
+serde-wasm-bindgen = "0.5.0"
 wasm-bindgen = { version= "0.2.68", features = ["serde-serialize"] }
 
 console_error_panic_hook = { version = "0.1.7", optional = true }
@@ -27,3 +27,7 @@ wasm-bindgen-test = "0.3.34"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[profile.dev]
+opt-level = 3
+
