--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ol": "^7.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-bootstrap-range-slider": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
