--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "ol": "^7.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-bootstrap-icons": "^1.10.3",
-    "react-bootstrap-range-slider": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -29,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:wasm": "npm run build:wasm && react-scripts start",
-    "build": "npm run build:wasm && react-scripts build",
+    "build": "react-scripts build",
     "build:wasm": "wsl --exec /bin/sh -c \"export PATH=\"~/.cargo/bin:$PATH\" && cd src/wasm && wasm-pack build --target web\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
