--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
     "ol": "^7.5.1",
+    "rc-slider": "^10.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
