--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@turf/circle": "^6.5.0",
     "@turf/polygon-smooth": "^6.5.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.0",
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
     "ol": "^7.5.1",
     "rc-slider": "^10.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
