--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dota2wardmap-front",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://Rupas1k.github.io/dota2wardmap-front",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -34,6 +34,8 @@
     "start:wasm": "npm run build:wasm && react-scripts start",
     "build": "react-scripts build",
     "build:wasm": "wsl --exec /bin/sh -c \"export PATH=\"~/.cargo/bin:$PATH\" && cd src/wasm && wasm-pack build --target web\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
