--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dota2wardmap-front",
+  "name": "wardmap",
   "version": "0.1.0",
-  "homepage": "https://Rupas1k.github.io/dota2wardmap-front",
+  "homepage": "https://Rupas1k.github.io/wardmap",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
